# service/apisvr/internal/handler/wsRoutes.go
@@ -1186,6 +1186,11 @@ func RegisterWsHandlers(server *ws.Server, serverCtx *svc.ServiceContext) {
 			[]rest.Route{
 				{
 					Method:  http.MethodPost,
+					Path:    "/app/read",
+					Handler: systemuserself.AppReadHandler(serverCtx),
+				},
+				{
+					Method:  http.MethodPost,
 					Path:    "/captcha",
 					Handler: systemuserself.CaptchaHandler(serverCtx),
 				},
